---------------------------------------------------------------------------------------------------
Version: 0.1.15
Date: ???
  Changes:
    - Added information about the deleveler
    - Refactored mods. Energy is now checked every time. Default mod accepts table.
    - Adjusted power for inserters and beacons
  Bug fixes:
    - Fixed quality armor not visible on character
---------------------------------------------------------------------------------------------------
Version: 0.1.14
Date: 2023-11-20
  Bug fixes:
    - Fixed low-resolution quality mask for beacons
    - Fixed programming not unlocking on some entities
    - Fixed icons of quality machines in upgrade planner
---------------------------------------------------------------------------------------------------
Version: 0.1.13
Date: 2023.11.19
  Changes:
    - Personal shields recharge proportionally with hit points
    - Moved quality enhancing machines to their own tab
    - Moved deleveler to the end of its subgroup so buildings fit nicer
    - Added quality overlay for beacon modules
  Bug fixes:
    - Fixed names of machines with quality modules
    - Fixed quality enhancing machines order
    - Fixed quality enhancing machine programming unlocks
---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: 2023.11.18
  Changes:
    - Equipment quality pips returned to center to fix display when hovering
  Bug fixes:
    - Fixed personal roboports losing quality
    - Support for energy values with uppercase "K"
    - Fixed roboport internal battery too small
---------------------------------------------------------------------------------------------------
Version: 0.1.11
Date: 2023.11.15
  Changes:
    - Added tooltips for quality modules
  Bug fixes:
    - Fixed technology unlocks causes a stack overflow in certain cases
---------------------------------------------------------------------------------------------------
Version: 0.1.10