@@ -18,5 +18,12 @@ data:extend {
         default_value = "",
         allow_blank = true,
     },
+    {
+        type = "double-setting",
+        name = "jq-recycling-efficiency",
+        setting_type = "startup",
+        default_value = 0.25,
+        minimum_value = 0.0,
+        maximum_value = 1.0,
+    },
 }
-
