@@ -5,6 +5,7 @@ Date: ???
     - Added information about the deleveler
     - Refactored mods. Energy is now checked every time. Default mod accepts table.
     - Adjusted power for inserters and beacons
+    - Recycling efficiency setting
   Bug fixes:
     - Fixed quality armor not visible on character
 ---------------------------------------------------------------------------------------------------
